Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/IP_BranchStatus__c.object-meta.xml
<CustomObject>
    <label>Branch Status List</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Status Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>