Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/Branch_Phone__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone__c</fullName>
    <label>Branch Phone</label>
    <type>Phone</type>
</CustomField>