Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/Covered_Areas__c.field-meta.xml
<CustomField>
    <fullName>Covered_Areas__c</fullName>
    <label>Covered Areas</label>
    <summaryForeignKey>Covering_Branch__c.Branch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>