Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/IP_BranchID__c.field-meta.xml
<CustomField>
    <fullName>IP_BranchID__c</fullName>
    <externalId>true</externalId>
    <label>Branch ID</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>