Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/IP_Division__c.field-meta.xml
<CustomField>
    <fullName>IP_Division__c</fullName>
    <externalId>true</externalId>
    <label>Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>