Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/IP_Payroll_to_Process__c.field-meta.xml
<CustomField>
    <fullName>IP_Payroll_to_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll to Process</label>
    <type>Checkbox</type>
</CustomField>