Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/IP_Region__c.field-meta.xml
<CustomField>
    <fullName>IP_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_RegionList</valueSetName>
    </valueSet>
</CustomField>