Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/fields/IP_Status__c.field-meta.xml
<CustomField>
    <fullName>IP_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>