Frankbelford/uatv1ba/force-app/main/default/objects/IP_BranchStatus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IP_BranchID__c</columns>
    <columns>Branch_Phone__c</columns>
    <columns>Manager__c</columns>
    <columns>IP_Division__c</columns>
    <columns>IP_Status__c</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>IP_Region__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Blue Arrow</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>newport,payroll,blackpool,warrington,dundee,manchester,barnstaple,taunton,spalding,durham,fulfilment</value>
    </filters>
    <label>All</label>
</ListView>